--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-transition-group": "^4.2.3",
     "antd-mobile": "^2.3.1",
     "better-scroll": "^1.15.2",
     "immutable": "^4.0.0-rc.12",
@@ -11,6 +12,7 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.1.2",
+    "react-transition-group": "^4.3.0",
     "redux": "^4.0.4",
     "redux-immutable": "^4.0.0",
     "redux-saga": "^1.1.1",
